<resources>
    <string name="app_name">ShanlingHelper</string>
    <string name="nav_upload">Upload</string>
    <string name="nav_crop">Lock screen image crop</string>
    <string name="hint_enter_shanling_url">Please input the URL of Shanling WiFi transfer</string>
    <string name="permission_rationale">Program need the permission of read and write to external storage for upload file to player</string>
    <string name="message_no_permission">Can not get the permission of read and write to external storage, please restart this program and allow it get the permission</string>
    <string name="message_no_enter_shanling_url">Please input the URL of Shanling WiFi transfer</string>
    <string name="message_shanling_url_error">The URL of Shanling WiFi transfer is incorrect, please check and retry</string>
    <string name="message_connect_shanling_wifi_transfer_error">Can not connect to Shanling WiFi transfer, please check the network connection or check the URL</string>
    <string name="message_shanling_file_json_parse_error">Data parse error, can not open this folder, please try later</string>
    <string name="message_no_select_file">No select any files</string>
    <string name="message_file_will_upload_to">These files will be uploaded to %1$s</string>
    <string name="message_can_not_get_shanling_wifi_transfer_url">Can not get Shanling WiFi transfer URL</string>
    <string name="message_uploading">Uploading</string>
    <string name="message_uploading_progress">Current uploading: %1$s\nCurrent file progress: %2$d&#37;&#37;\nProgress: %3$d / %4$d\nUpload Rate: %5$s</string>
    <string name="message_upload_success">Successful uploaded %1$d file(s)</string>
    <string name="message_current_path">Current path：%1$s</string>
    <string name="message_unknown_create_date">Unknown Date</string>
    <string name="message_unknown_file_size">Unknown Size</string>
    <string name="message_new_folder_name">New Folder Name</string>
    <string name="message_new_file_name">New File Name</string>
    <string name="message_create_folder_success">Create folder successfully</string>
    <string name="message_create_folder_error">Can not create folder</string>
    <string name="message_delete_confirm">Confirm to delete this file?</string>
    <string name="message_delete_success">Successfully deleted</string>
    <string name="message_delete_fail">Failed to delete</string>
    <string name="message_rename_success">Successfully renamed</string>
    <string name="message_rename_fail">Failed to rename</string>
    <string name="app_name_and_version_name">%1$s v%2$s</string>
    <string name="btn_ok">OK</string>
    <string name="btn_cancel">Cancel</string>
    <string name="menu_exit">Exit</string>
    <string name="menu_new_folder">New Folder</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_rename">Rename</string>
    <string name="menu_settings">Settings</string>
    <string name="title_upload_activity">Confirm upload the files below?</string>
    <string name="title_uploading">Upload files to Shanling player</string>
    <string name="title_input_new_folder_name">Please enter new folder name</string>
    <string name="title_input_new_file_name">Please enter new file name</string>
    <string name="title_delete_confirm">Delete file</string>
    <string name="pref_category_title_about">About</string>
    <string name="pref_title_author">Author</string>
    <string name="pref_title_version">Version</string>
    <string name="pref_category_title_app_settings">App settings</string>
    <string name="pref_title_wifi_transfer_url">WiFi transfer url</string>
</resources>
